[gd_scene load_steps=9 format=3 uid="uid://dhnjwp6phamtf"]

[ext_resource type="Script" path="res://hand.gd" id="1_54vue"]
[ext_resource type="Texture2D" uid="uid://rclhgeeerj2y" path="res://hand.png" id="1_dolmu"]
[ext_resource type="Script" path="res://HitBox.gd" id="3_xsn05"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cg185"]
radius = 14.2583
height = 40.0

[sub_resource type="Animation" id="Animation_ofa2f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3sr5s"]
resource_name = "swing"
length = 0.500005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.0250306, 0.05, 0.075, 0.1, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(18, -4), Vector2(18.013, -5), Vector2(29, -15), Vector2(38.286, -25), Vector2(52.286, -40), Vector2(30.2857, -15.2857), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.025, 0.1125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ibofv"]
_data = {
"RESET": SubResource("Animation_ofa2f"),
"swing": SubResource("Animation_3sr5s")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pjr3c"]
radius = 9.42821
height = 37.7128

[node name="Hand" type="Node2D"]
script = ExtResource("1_54vue")

[node name="Pivot" type="Node2D" parent="."]
rotation = 0.349066

[node name="Sprite" type="Sprite2D" parent="Pivot"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_dolmu")

[node name="Held" type="Node2D" parent="Pivot"]
position = Vector2(6.40856, 2.98836)

[node name="HitBox" type="Area2D" parent="Pivot"]
position = Vector2(-5.21322, -5.55179)
rotation = -0.349066
script = ExtResource("3_xsn05")
impact = 90000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitBox"]
position = Vector2(2.714, 5)
rotation = -0.523599
shape = SubResource("CapsuleShape2D_cg185")
disabled = true
debug_color = Color(1, 0.00784314, 0.0431373, 0.419608)

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ibofv")
}

[node name="Aggression" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Aggression"]
position = Vector2(29, -15)
rotation = 1.0472
shape = SubResource("CapsuleShape2D_pjr3c")
debug_color = Color(0.694118, 0.282353, 1, 0.196078)

[connection signal="body_entered" from="Aggression" to="." method="_on_aggression_body_entered"]
[connection signal="body_exited" from="Aggression" to="." method="_on_aggression_body_exited"]
